Fixed collapse-section header styles

--- a/collapse-section/collapse-section.less
+++ b/collapse-section/collapse-section.less
@@ -5,6 +5,14 @@
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+
+		&.justified {
+			justify-content: space-between;
+		}
+
+		&.center {
+			justify-content: center;
+		}
 	}
 
 	.collapse-section-title {
